--- a/easylistview-android/src/main/res/layout/template_staggered_grid_item_vh.xml
+++ b/easylistview-android/src/main/res/layout/template_staggered_grid_item_vh.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content">
 
     <LinearLayout
+        android:id="@+id/container_item"
         android:orientation="vertical"
         android:clickable="true"
         android:background="@drawable/ripple_effect"
